--- a/jenkinsfile
+++ b/jenkinsfile
@@ -392,6 +392,8 @@ podTemplate(
                         if (APP_VERSION == "") {
                             echo 'Raise a real error here, as the parsing was not correct'
                             echo 'Could instead use Short Commit, for non Production Environments: ' + env.BRANCH_NAME  +'-'+GIT_SHORT_COMMIT
+                            chartYaml.appVersion = env.BRANCH_NAME  +'-'+GIT_SHORT_COMMIT
+
                         } else {
                             chartYaml.appVersion = APP_VERSION
                         }
