--- a/jenkinsfile
+++ b/jenkinsfile
@@ -50,6 +50,7 @@ def GIT_COMMIT_HEAD_TAG = ""
 def GIT_SHORT_COMMIT = ""
 def HELM_RELEASE_NAME_FINAL = ""
 def HELM_YAML_LOCATION_FINAL = ""
+def HELM_TGZ_PACKAGE_FINAL = ""
 def APP_VERSION = ""
       //Project that image will be built/tagged to.
 
@@ -367,39 +368,33 @@ podTemplate(
                     echo 'Run Helm Lint Test'
                     //sh 'helm lint ${HELM_CHART_LOCATION}'
                 }
-//                if (env.BRANCH_NAME == 'master' ){
-                if (env.BRANCH_NAME == 'develop' ){
+                stage('Helm Versioning') {
+                    if (env.BRANCH_NAME == 'develop' || env.BRANCH_NAME == 'stage') {
+                        //Just version the appVersion for clarity, no "real" purpose.
+                        def chartYaml = readYaml file: 'helm/helpline/Chart.yaml'
+                        def chartVersion = chartYaml.version.toString()
+                        def appVersion = chartYaml.appVersion.toString()
+                        chartYaml.appVersion = env.BRANCH_NAME  +'-'+GIT_SHORT_COMMIT
+                        echo 'Current: Chartversion:'+chartVersion+'appVersion:'+appVersion+
 
-                    stage('Chart Versioning') {
-                        // Read from Chart values.  Get chartVersion
+                        sh "rm -f helm/helpline/Chart.yaml"
+                        writeYaml file: "helm/helpline/Chart.yaml", data: chartYaml
+
+                    } else if (env.BRANCH_NAME == 'master') {
+                        //App and Chart Version
                         def chartYaml = readYaml file: 'helm/helpline/Chart.yaml'
                         def valuesYaml = readYaml file: 'helm/helpline/values.yaml'
 
                         def chartVersion = chartYaml.version.toString()
                         def appVersion = chartYaml.appVersion.toString()
                         def currentImage = valuesYaml.images.apiTag.toString()
-
-                        if (chartVersion == "") {
-                            //Failed to parse chartVersion. Helm package will fail.
-                            error: chartversion not found
-                        }
-
-                        echo 'Current Chart Version: ' + chartVersion
-                        echo 'Current App Version: ' + appVersion
-                        echo 'Current Image Tag: ' + currentImage
-
-                        //Makes appVersion shown in Helm always match App Versino or Git Commit.
+                        echo 'Current: Chartversion:'+chartVersion+' appVersion:'+appVersion+' currentImage:'+currentImage
                         if (APP_VERSION == "") {
-                            echo 'Raise a real error here, as the parsing was not correct'
-                            echo 'Could instead use Short Commit, for non Production Environments: ' + env.BRANCH_NAME  +'-'+GIT_SHORT_COMMIT
-                            chartYaml.appVersion = env.BRANCH_NAME  +'-'+GIT_SHORT_COMMIT
-
+                            error 'No Parsed APP_VERSION for deployment.'
                         } else {
                             chartYaml.appVersion = APP_VERSION
+                            valuesYaml.images.apiTag = APP_VERSION
                         }
-
-                        //Overwrite some values
-                        valuesYaml.images.apiTag = APP_VERSION
 
                         sh "rm -f helm/helpline/values.yaml"
                         sh "rm -f helm/helpline/Chart.yaml"
@@ -407,52 +402,44 @@ podTemplate(
                         writeYaml file: "helm/helpline/values.yaml", data: valuesYaml
                         writeYaml file: "helm/helpline/Chart.yaml", data: chartYaml
 
-                        //Add check of new yaml files values?
-                        echo 'overwrite values.yaml'
 
-                    }
-                    
-                    stage('Package Helm'){
-                        //Pacakge Helm
-                        //sh "helm package helm/helpline -d helm"
-                        //We know the name of the .tgz will be <chartname>-<chartversion>.tgz
-                        //def PACKAGE_NAME = "helpline-${chartVersion}.tgz"
-                        //sh """
-                        //echo "Package Name: ${PACKAGE_NAME}"
-                        //"""
-                        echo 'Check of new Yamls: '
+                    } else if ((env.BRANCH_NAME.contains(HOT_TAG_FILTER) && GIT_COMMIT_HEAD_TAG.contains(HOT_TAG_FILTER)) || (env.BRANCH_NAME.contains(REL_TAG_FILTER) && GIT_COMMIT_HEAD_TAG.contains(REL_TAG_FILTER)){
+
+                       //App and Chart Version
                         def chartYaml = readYaml file: 'helm/helpline/Chart.yaml'
                         def valuesYaml = readYaml file: 'helm/helpline/values.yaml'
 
                         def chartVersion = chartYaml.version.toString()
                         def appVersion = chartYaml.appVersion.toString()
-
                         def currentImage = valuesYaml.images.apiTag.toString()
-
-                        if (chartVersion == "") {
-                            //Failed to parse chartVersion. Helm package will fail.
-                            error: chartversion not found
+                        echo 'Current: Chartversion:'+chartVersion+' appVersion:'+appVersion+' currentImage:'+currentImage
+                        if (APP_VERSION == "") {
+                            error 'No Parsed APP_VERSION for deployment.'
+                        } else {
+                            chartYaml.appVersion = APP_VERSION
+                            valuesYaml.images.apiTag = APP_VERSION
                         }
-                        echo 'Current Chart Version: ' + chartVersion
-                        echo 'Current App Version: ' + appVersion
-                        echo 'Current Image Tag: ' + currentImage
 
-                        echo 'Package helm into .tgz'
-                    }
-                    stage('Overwrite values.yaml') {
-                    
-                    }
-                    stage('Push to ChartMuseum') {
-                        //Push to ChartMuseum
-                        //Could put these credentials in Jenkins...and probably change them in ChartMuseum
-                        //sh """
-                        //curl -u admin:admin -k  \
-                        //--data-binary ${PACKAGE_NAME} \
-                        //http://chartmuseum-chartmuseum.chartmuseum:8080/api/charts
-                        //"""
-                        echo 'Push to ChartMuseum'                    
-                    }
-                }
+                        sh "rm -f helm/helpline/values.yaml"
+                        sh "rm -f helm/helpline/Chart.yaml"
+
+                        writeYaml file: "helm/helpline/values.yaml", data: valuesYaml
+                        writeYaml file: "helm/helpline/Chart.yaml", data: chartYaml
+                    } 
+                    stage('Package Helm and Push to ChartMuseum'){
+                        if(env.BRANCH_NAME == 'master') {
+                            sh """"
+                            echo 'sh helm package ${HELM_CHART_LOCATION} -d ${HELM_TGZ_DEST_DIR}'
+                            """
+                            HELM_TGZ_PACKAGE_FINAL = ${HELM_CHARTNAME} + '-'+ chartVersion + '.tgz.'
+                            echo 'Helm .tgz Package: ' + HELM_TGZ_PACKAGE_FINAL
+
+                            sh """
+                            echo 'curl -u admin:admin -k --data-binary ${HELM_TGZ_PACKAGE_FINAL} http://chartmuseum-chartmuseum.chartmuseum:8080/api/charts'
+                            """
+
+                        }
+                     }
                 stage ('Deploy with Helm') {
                     //Could make this a "configuration step, and just set all remaining values before a global "deploy"
                     if (env.BRANCH_NAME == 'master'){
