--- a/jenkinsfile
+++ b/jenkinsfile
@@ -403,7 +403,7 @@ podTemplate(
                         writeYaml file: "helm/helpline/Chart.yaml", data: chartYaml
 
 
-                    } else if ((env.BRANCH_NAME.contains(HOT_TAG_FILTER) && GIT_COMMIT_HEAD_TAG.contains(HOT_TAG_FILTER)) || (env.BRANCH_NAME.contains(REL_TAG_FILTER) && GIT_COMMIT_HEAD_TAG.contains(REL_TAG_FILTER)){
+                    } else if ((env.BRANCH_NAME.contains(HOT_TAG_FILTER) && GIT_COMMIT_HEAD_TAG.contains(HOT_TAG_FILTER)) || (env.BRANCH_NAME.contains(REL_TAG_FILTER) && GIT_COMMIT_HEAD_TAG.contains(REL_TAG_FILTER))){
 
                        //App and Chart Version
                         def chartYaml = readYaml file: 'helm/helpline/Chart.yaml'
@@ -467,16 +467,16 @@ podTemplate(
                         echo 'No deploy for HotFix.'
                         
                     } else if (env.BRANCH_NAME == 'develop' || env.BRANCH_NAME == 'stage' || (env.BRANCH_NAME.contains(REL_TAG_FILTER) && GIT_COMMIT_HEAD_TAG.contains(REL_TAG_FILTER))){
-                        /* Real Code Below
                         sh """
-                        helm version --tiller-namespace ${HELM_TILLER_NAMESPACE} \
+                        echo 'helm version --tiller-namespace ${HELM_TILLER_NAMESPACE} \
                         helm upgrade --install ${HELM_RELEASE_NAME_FINAL} \
                         ${HELM_CHART_LOCATION} \
                         --namespace ${DEPLOY_OS_PROJECT} \
                         --tiller-namespace ${HELM_TILLER_NAMESPACE} \
                         -f ${HELM_YAML_LOCATION_FINAL} \
-                        --set image.apiRepository=${DEPLOY_OS_PROJECT}
-                        --set image.apiTag=${DEPLOY_IMAGE_TAG}
+                        --set image.apiRepository=${DEPLOY_OS_PROJECT} \
+                        --set image.apiTag=${DEPLOY_IMAGE_TAG} \
+                        '
                         """
                         */
 
