--- a/jenkinsfile
+++ b/jenkinsfile
@@ -468,9 +468,10 @@ podTemplate(
                         echo 'No deploy for HotFix.'
                         
                     } else if (env.BRANCH_NAME == 'develop' || env.BRANCH_NAME == 'stage' || (env.BRANCH_NAME.contains(REL_TAG_FILTER) && GIT_COMMIT_HEAD_TAG.contains(REL_TAG_FILTER))){
+                        echo 'Deploy with helm to ' + DEPLOY_OS_PROJECT + ' with tag:' + DEPLOY_IMAGE_NAME
+
                         sh """
-                        echo 'helm version --tiller-namespace ${HELM_TILLER_NAMESPACE} \
-                        helm upgrade --install ${HELM_RELEASE_NAME_FINAL} \
+                        echo 'helm upgrade --install ${HELM_RELEASE_NAME_FINAL} \
                         ${HELM_CHART_LOCATION} \
                         --namespace ${DEPLOY_OS_PROJECT} \
                         --tiller-namespace ${HELM_TILLER_NAMESPACE} \
@@ -479,9 +480,6 @@ podTemplate(
                         --set image.apiTag=${DEPLOY_IMAGE_TAG} \
                         '
                         """
-                        //Deploy with :test
-                        echo 'Deploy with helm to ' + DEPLOY_OS_PROJECT + ' with tag:' + DEPLOY_IMAGE_NAME
-                        sh 'helm --help'
                     } else {
                         echo 'No Deploy.'
                         echo 'Head Tag:' + GIT_COMMIT_HEAD_TAG
