--- a/jenkinsfile
+++ b/jenkinsfile
@@ -474,6 +474,43 @@ podTemplate(
                         """
                     }
                 }
+                stage('Post-Deploy Verification') {
+                    container('jnlp') {
+                        if (env.BRANCH_NAME == 'master') {
+                            echo 'Post Deploy Verfication for Master'
+                            sh """
+                            echo 'oc -n ${DEPLOY_OS_PROJECT} rollout status deployment api'
+                            """
+                        } else if (env.BRANCH_NAME == 'develop'){
+                            echo 'Post Deploy Verfication for Develop'
+                        } else if (env.BRANCH_NAME == 'stage'){
+                            echo 'Post Deploy Verfication for Stage'
+                        } else if (env.BRANCH_NAME.contains(REL_TAG_FILTER) && GIT_COMMIT_HEAD_TAG.contains(REL_TAG_FILTER)){
+                            echo 'Post Deploy Verfication for Release'
+                        } else if (env.BRANCH_NAME.contains(HOT_TAG_FILTER) && GIT_COMMIT_HEAD_TAG.contains(HOT_TAG_FILTER)){
+                            echo 'Post Deploy Verfication for HotFix'
+                        } 
+                    }
+                }    
+                stage('Post-Deploy Jobs') {
+                    //Could be run by Helm as Jobs, or by OpenShift using 'oc apply'
+                    container('jnlp') {
+                        if (env.BRANCH_NAME == 'master') {
+                            echo 'Post Deploy Jobs for Master'
+                            sh """
+                            echo 'oc apply -f k8/post-upgrade-job.yml --namespace ${DEPLOY_OS_PROJECT}'
+                            """
+                        } else if (env.BRANCH_NAME == 'develop'){
+                            echo 'Post Deploy Jobs for Develop'
+                        } else if (env.BRANCH_NAME == 'stage'){
+                            echo 'Post Deploy Jobs for Stage'
+                        } else if (env.BRANCH_NAME.contains(REL_TAG_FILTER) && GIT_COMMIT_HEAD_TAG.contains(REL_TAG_FILTER)){
+                            echo 'Post Deploy Jobs for Release'
+                        } else if (env.BRANCH_NAME.contains(HOT_TAG_FILTER) && GIT_COMMIT_HEAD_TAG.contains(HOT_TAG_FILTER)){
+                            echo 'Post Deploy Jobs for HotFix'
+                        } 
+                    }
+                }                
                 stage('JIRA') {
                     container('jnlp') {
                         if (env.BRANCH_NAME == 'master') {
