--- a/jenkinsfile
+++ b/jenkinsfile
@@ -262,8 +262,7 @@ podTemplate(
                     """ 
                 } else if (env.BRANCH_NAME == 'develop' || env.BRANCH_NAME == 'stage' || \
                     (env.BRANCH_NAME.contains(REL_TAG_FILTER) && GIT_COMMIT_HEAD_TAG.contains(REL_TAG_FILTER)) || \
-                    (env.BRANCH_NAME.contains(REL_TAG_FILTER) \
-                    && GIT_COMMIT_HEAD_TAG.contains(REL_TAG_FILTER)) {
+                    (env.BRANCH_NAME.contains(REL_TAG_FILTER) && GIT_COMMIT_HEAD_TAG.contains(REL_TAG_FILTER))) {
                     //Both Build and Application/Deployment Secret
                     
                     echo '1. Delete All Secrets in TST. 2. Create Image build secretsin TST. 3. Create Application Secrets in TST.'
